--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
     <link rel="stylesheet" href="styles.css">
-    <button class="second">Click me</button>
+    <button class="second">Message me</button>
 </html> 
